<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/searchFragment">

    <fragment
        android:id="@+id/searchFragment"
        android:name="com.pedro.cinelog.ui.search.SearchFragment"
        android:label="@string/menu_buscar"
        tools:layout="@layout/fragment_search">
        <action
            android:id="@+id/action_searchFragment_to_detailFragment"
            app:destination="@id/detailFragment" />
    </fragment>

    <fragment
        android:id="@+id/diaryFragment"
        android:name="com.pedro.cinelog.ui.diary.DiaryFragment"
        android:label="@string/menu_diario"
        tools:layout="@layout/fragment_diary">
        <action
            android:id="@+id/action_diaryFragment_to_detailFragment"
            app:destination="@id/detailFragment" />
    </fragment>

    <fragment
        android:id="@+id/statsFragment"
        android:name="com.pedro.cinelog.ui.stats.StatsFragment"
        android:label="@string/menu_estatisticas"
        tools:layout="@layout/fragment_stats" />

    <fragment
        android:id="@+id/detailFragment"
        android:name="com.pedro.cinelog.ui.detail.DetailFragment"
        android:label="@string/titulo_detalhes"
        tools:layout="@layout/fragment_detail">
        <argument
            android:name="tmdbId"
            app:argType="integer" />
    </fragment>

</navigation>
